# event-mgt

./: Cargo.toml  Dockerfile  Readme.md  compose.yaml
src/: create_message_processor.rs  main.rs
src/adapters/: mod.rs
src/adapters/memo_api/: router.rs
src/adapters/memo_events/: mod.rs  sqs_poller.rs
src/adapters/memo_events/processors/: create_message_processor.rs  event_type.rs  event_type_processor.rs  mod.rs  model.rs
src/client/: dynamodb_client.rs
src/errors/: main.rs
src/services/: mod.rs  notification.rs  store.rs
src/utils/: utils.rs
