[package]
name = "memo-events-mgt"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Marcus Man"]
description = "Memo Events Management"
edition = "2018"


[dependencies]
aws-config = { version= "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.3.0"
aws-sdk-eventbridge = "1.3.0"
aws-sdk-sqs = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
async-trait = "0.1"
lazy_static = "1.4.0"
axum = "0.7.1"
jsonwebtoken = "7"
chrono = "0.4.3"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
